--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "larapack/doctrine-support": "~0.1.4",
         "arrilot/laravel-widgets": "^3.7",
         "league/flysystem": "~1.0.41",
-        "larapack/logoincc-hooks": "~1.2.1",
+        "larapack/logoinc-hooks": "~1.2.1",
         "ext-json": "*"
     },
     "require-dev": {
