--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "intervention/image": "^2.4",
         "doctrine/dbal": "^2.5",
         "larapack/doctrine-support": "~0.1.4",
-        "ilogo/logoincc-hooks": "~1.2.1",
+        "ilogo/logoinc-hooks": "~1.2.1",
         "arrilot/laravel-widgets": "^3.7",
         "league/flysystem": "~1.0.41",
         "ext-json": "*"
